--- a/InventoryManagement/InventoryManagementGUI.csproj
+++ b/InventoryManagement/InventoryManagementGUI.csproj
@@ -20,6 +20,7 @@
     <None Remove="Images\img_shipment.png" />
     <None Remove="Images\img_transaction.png" />
     <None Remove="Images\inventory_logo.png" />
+    <None Remove="Images\logout_img.png" />
     <None Remove="Images\order_page.png" />
     <None Remove="Images\password.png" />
     <None Remove="Images\product_page.png" />
@@ -65,6 +66,9 @@
     <Content Include="Images\inventory_logo.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Images\logout_img.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\order_page.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -107,6 +111,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Dialog\SupplierDetail.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="View\ProductsManager.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
